--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python -m unittest discover -s tests -p "test_*.py" -v
+  - python -m unittest discover -s AppliedAITest -p "test_*.py" -v
